Fixed hotsauce spacing

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -20,12 +20,17 @@
 }
 
 .sauce-card {
-    padding: 10px 10px 10px 10px;
+    padding: 25px 10px;
     color: #FF9770;
     background-color: #FF9770;
+    width: 15rem;
 }
 
 .fullCard {
   color: #FFD670;
   background-color: #FF70A6;
+}
+
+#hot-sauce {
+  width: 100%;
 }
